--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,8 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/AudienceExtender"
+db.default.user="ae"
+db.default.password="ae_sec_6367!923"
 db.default.jndiName=DefaultDS
 
 # Evolutions
