--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/AudienceExtender"
-db.default.user="ae"
-db.default.password="ae_sec_6367!923"
+db.default.url="jdbc:postgresql://ae:ae_sec_6367!923@localhost/AudienceExtender"
+#db.default.user="ae"
+#db.default.password="ae_sec_6367!923"
 db.default.jndiName=DefaultDS
 
 # Evolutions
