--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,13 @@ db.default.url="postgres://ae:ae@localhost/AudienceExtender"
 #db.default.password="ae"
 db.default.jndiName=DefaultDS
 
+smtp.host=localhost
+smtp.port=25
+#smtp.ssl=no
+#smtp.tls=no
+#smtp.user=
+#smtp.password=
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
