allow remote assets

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,10 @@ smtp.port=25
 #smtp.user=
 #smtp.password=
 
+# set CONTENT_URL env to cloudfront instance
+
+contenturl=${?CONTENT_URL}
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
