--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,11 @@ smtp.port=25
 #smtp.user=
 #smtp.password=
 
+# mail where contact mails go to
+
+contactemail="root@localhost"
+cookiedomain="app.audienceextender.com"
+
 # set CONTENT_URL env to cloudfront instance
 
 contenturl=${?CONTENT_URL}
