--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,7 @@
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="6^4vgp]5S6Es@S;Jf:dtmT9T;7qgnQ9j:07c6_j]yvvwtIQCv=w2_Q9;C>ZXpY]t"
 
-session.secure=true
+session.secure=false
 
 # The application languages
 # ~~~~~
