add campaign scheduler

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,7 +51,7 @@ smtp.port=25
 # mail where contact mails go to
 
 contactemail="root@localhost"
-cookiedomain="app.audienceextender.com"
+cookiedomain="www.audienceextender.com"
 
 # set CONTENT_URL env to cloudfront instance
 
