--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,7 @@ cookiedomain="www.audienceextender.com"
 # set CONTENT_URL env to cloudfront instance
 
 contenturl=${?CONTENT_URL}
+assets.defaultCache="max-age=31556926"
 
 # Evolutions
 # ~~~~~
